# bbcat-audioobjects

./: CMakeLists.txt  Makefile.am  README  aplibs-audioobjects-uninstalled.pc.in  aplibs-audioobjects.pc.in  bbcat-audioobjects-uninstalled.pc.in  bbcat-audioobjects.pc.in  configure.ac  doxygen.cfg
aplibs-audioobjects/: ADMAudioFileSamples.cpp  ADMAudioFileSamples.h  ADMData.cpp  ADMData.h  ADMObjects.cpp  ADMObjects.h  ADMRIFFFile.cpp  ADMRIFFFile.h  FilePositionGenerator.cpp  FilePositionGenerator.h  Makefile.am  PlaybackEngine.cpp  PlaybackEngine.h  Playlist.cpp  RIFFChunk.cpp  RIFFChunk.h  RIFFChunk_Definitions.h  RIFFChunks.cpp  RIFFChunks.h  RIFFFile.cpp  RIFFFile.h  SoundFileAttributes.cpp  SoundFileAttributes.h  SoundFileWithPosition.h  TinyXMLADMData.cpp  TinyXMLADMData.h  crc32.cpp  crc32.h  mt19937ar.c  mt19937ar.h
cmake_modules/: FindTinyXML.cmake
debian/: changelog  control
examples/: CMakeLists.txt  README  create-adm.cpp  load-xml.cpp  makefile  map-adm-bwf.cpp  modify-adm-bwf.cpp  play-metadata.cpp  read-adm-bwf.cpp  udp-demo.cpp  write-adm-bwf.cpp  write-separate-adm.cpp
share/: licences.txt  standarddefinitions.xml
src/: ADMAudioFileSamples.cpp  ADMAudioFileSamples.h  ADMData.cpp  ADMData.h  ADMFileReader.cpp  ADMFileReader.h  ADMFileWriteRenderer.cpp  ADMFileWriteRenderer.h  ADMFileWriter.cpp  ADMFileWriter.h  ADMObjects.cpp  ADMObjects.h  ADMRIFFFile.cpp  ADMRIFFFile.h  ADMXMLGenerator.cpp  BWFFileWriter.cpp  BWFFileWriter.h  CMakeLists.txt  FilePositionGenerator.cpp  FilePositionGenerator.h  Makefile.am  OpenTLEventList.cpp  OpenTLEventList.h  PlaybackEngine.cpp  PlaybackEngine.h  Playlist.cpp  Playlist.h  PositionEventRecorder.cpp  PositionEventRecorder.h  RIFFChunk.cpp  RIFFChunk.h  RIFFChunk_Definitions.h  RIFFChunks.cpp  RIFFChunks.h  RIFFFile.cpp  RIFFFile.h  SoundFileAttributes.cpp  SoundFileAttributes.h  SoundFileWithPosition.cpp  SoundFileWithPosition.h  (+11 more)
