pkgincludedir = $(includedir)/bbcat-audioobjects-@BBCAT_AUDIOOBJECTS_MAJORMINOR@/bbcat-audioobjects

lib_LTLIBRARIES = libbbcat-audioobjects-@BBCAT_AUDIOOBJECTS_MAJORMINOR@.la

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_LDFLAGS =	\
	-no-undefined													\
	-version-info $(BBCAT_AUDIOOBJECTS_LIBVERSION)					\
     $(BBCAT_AUDIOOBJECTS_LDFLAGS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_LIBADD =	\
	$(BBCAT_BASE_LIBS)												\
	$(BBCAT_DSP_LIBS)												\
	$(TINYXML_LIBS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_CPPFLAGS =	\
	$(BBCAT_AUDIOOBJECTS_CFLAGS)									\
	$(BBCAT_BASE_CFLAGS)											\
	$(BBCAT_DSP_CFLAGS)												\
	$(TINYXML_CFLAGS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES =	\
	ADMAudioFileSamples.cpp											\
	ADMData.cpp														\
	ADMObjects.cpp													\
	ADMRIFFFile.cpp													\
	Playlist.cpp													\
	RIFFChunk.cpp													\
	RIFFChunks.cpp													\
	RIFFFile.cpp													\
	SoundFileAttributes.cpp											\
	SoundFileWithPosition.cpp										\
	TinyXMLADMData.cpp

pkginclude_HEADERS =							\
	ADMAudioFileSamples.h						\
	ADMData.h									\
	ADMObjects.h								\
	ADMRIFFFile.h								\
	Playlist.h									\
	RIFFChunk.h									\
	RIFFChunk_Definitions.h						\
	RIFFChunks.h								\
	RIFFFile.h									\
	SelfRegisteringObjects.h					\
	SoundFileAttributes.h						\
	SoundFileWithPosition.h						\
	TinyXMLADMData.h

if ENABLE_RENDERING
libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_CPPFLAGS += $(BBCAT_RENDER_CFLAGS)
libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_LIBADD   += $(BBCAT_RENDER_LIBS)
libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES  +=	\
	ADMFileReader.cpp													\
	ADMFileWriter.cpp													\
	FilePositionGenerator.cpp											\
	PlaybackEngine.cpp

pkginclude_HEADERS +=							\
	ADMFileReader.h								\
	ADMFileWriter.h								\
	FilePositionGenerator.h						\
	PlaybackEngine.h
endif

SelfRegisteringObjects.h: $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) Makefile Makefile.am
	@echo "Factories found:"
	@grep -h -o -E "SELF_REGISTERING.*\(.+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/\1/" | sort
	@echo "//Auto-generated by Makefile.am - DO NOT EDIT!" >SelfRegisteringObjects.h
	@echo "BBC_AUDIOTOOLBOX_START" >>SelfRegisteringObjects.h
	@grep -h -o -E "SELF_REGISTERING.*\(.+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/extern RegisteredObjectFactory *factory_\1;/" | sort >>SelfRegisteringObjects.h
	@echo "const RegisteredObjectFactory *factories_audioobjects[]=\n{" >>SelfRegisteringObjects.h
	@grep -h -o -E "SELF_REGISTERING.*\(.+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/factory_\1,/" | sort >>SelfRegisteringObjects.h
	@echo "};\nBBC_AUDIOTOOLBOX_END" >>SelfRegisteringObjects.h

noinst_HEADERS =
