pkgincludedir = $(includedir)/bbcat-audioobjects-@BBCAT_AUDIOOBJECTS_MAJORMINOR@/bbcat-audioobjects

lib_LTLIBRARIES = libbbcat-audioobjects-@BBCAT_AUDIOOBJECTS_MAJORMINOR@.la

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_LDFLAGS =	\
	-no-undefined													\
	-version-info $(BBCAT_AUDIOOBJECTS_LIBVERSION)					\
     $(BBCAT_AUDIOOBJECTS_LDFLAGS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_LIBADD =	\
	$(BBCAT_BASE_LIBS)												\
	$(BBCAT_DSP_LIBS)												\
	$(BBCAT_CONTROL_LIBS)											\
	$(TINYXML_LIBS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_CPPFLAGS =	\
	$(BBCAT_BASE_CFLAGS)											\
	$(BBCAT_DSP_CFLAGS)												\
	$(BBCAT_CONTROL_CFLAGS)											\
	$(BBCAT_AUDIOOBJECTS_CFLAGS)									\
	$(TINYXML_CFLAGS)

libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES =	\
	ADMAudioFileSamples.cpp											\
	ADMData.cpp														\
	ADMObjects.cpp													\
	ADMRIFFFile.cpp													\
	Playlist.cpp													\
	RIFFChunk.cpp													\
	RIFFChunks.cpp													\
	RIFFFile.cpp													\
	SoundFileAttributes.cpp											\
	SoundObjectFile.cpp												\
	TinyXMLADMData.cpp												\
	XMLValue.cpp													\
	version.cpp

pkginclude_HEADERS =							\
	ADMAudioFileSamples.h						\
	ADMData.h									\
	ADMObjects.h								\
	ADMRIFFFile.h								\
	Playlist.h									\
	RIFFChunk.h									\
	RIFFChunk_Definitions.h						\
	RIFFChunks.h								\
	RIFFFile.h									\
	SelfRegisteringObjects.h					\
	SoundFileAttributes.h						\
	SoundObjectFile.h							\
	TinyXMLADMData.h							\
	XMLValue.h									\
	version.h

CLEANFILES = version.h version.cpp SelfRegisteringObjects.h

SelfRegisteringObjects.h: $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) Makefile Makefile.am
	@echo "Factories found:"
	@grep -h -o -E "SELF_REGISTERING.*\([a-zA-Z0-9_]+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/\1/" | sort
	@echo "//Auto-generated by Makefile.am - DO NOT EDIT!" >SelfRegisteringObjects.h
	@echo "BBC_AUDIOTOOLBOX_START" >>SelfRegisteringObjects.h
	@grep -h -o -E "SELF_REGISTERING.*\([a-zA-Z0-9_]+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/extern RegisteredObjectFactory *factory_\1;/" | sort >>SelfRegisteringObjects.h
	@echo "const RegisteredObjectFactory *factories_audioobjects[]=" >>SelfRegisteringObjects.h
	@echo "{" >>SelfRegisteringObjects.h
	@grep -h -o -E "SELF_REGISTERING.*\([a-zA-Z0-9_]+," $(libbbcat_audioobjects_@BBCAT_AUDIOOBJECTS_MAJORMINOR@_la_SOURCES) | sed -E "s/^.+\((.+),/factory_\1,/" | sort >>SelfRegisteringObjects.h
	@echo "};" >>SelfRegisteringObjects.h
	@echo "BBC_AUDIOTOOLBOX_END" >>SelfRegisteringObjects.h

noinst_HEADERS =

version.h: Makefile ../config.h ../gitbranch.txt
	echo "{\"@PACKAGE@\", \"@VERSION@-`cat ../gitbranch.txt`\"}," >version.h

version.cpp: Makefile ../config.h ../gitbranch.txt
	echo "/* Auto-generated: DO NOT EDIT! */" >version.cpp
	echo "#include <bbcat-base/LoadedVersions.h>" >>version.cpp
	echo "BBC_AUDIOTOOLBOX_START" >>version.cpp
	echo "volatile uint_t __keep_@PACKAGE@_version = bbcat::LoadedVersions::Get().Register(\"@PACKAGE@\", \"@VERSION@-`cat ../gitbranch.txt`\");" >>version.cpp
	echo "BBC_AUDIOTOOLBOX_END" >>version.cpp
